# book_index

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/2022-03-17-223230_create_bookss/: down.sql  up.sql
migrations/2023-10-25-134407_create_books/: up.sql
src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
